--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -1,41 +1,50 @@
-<%= form_for(@equipment) do |f| %>
-  <% if @equipment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@equipment.errors.count, "error") %> prohibited this equipment from being saved:</h2>
-
-      <ul>
-      <% @equipment.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @equipment, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :price, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :price, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :location_id %>
+    <div class="controls">
+      <%= collection_select(:equipment, :location_id, Location.all, :id, :name, :prompt => "Select Location") %>       
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :purchase_date, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.date_select :purchase_date, :class => 'date_select' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :placement_date, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.date_select :placement_date, :class => 'date_select' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :warranty_end_date, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.date_select :warranty_end_date, :class => 'date_select' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :location_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :location_id, :class => 'number_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :price %><br />
-    <%= f.text_field :price %>
-  </div>
-  <div class="field">
-    <%= f.label :location_id %><br />
-    <%= collection_select(:equipment, :location_id, Location.all, :id, :name, :prompt => "Select Location") %>  
-  </div>
-  <div class="field">
-    <%= f.label :purchase_date %><br />
-    <%= f.date_select :purchase_date, :include_blank => true %>
-  </div>
-  <div class="field">
-    <%= f.label :placement_date %><br />
-    <%= f.date_select :placement_date, :include_blank => true %>
-  </div>
-  <div class="field">
-    <%= f.label :warranty_end_date %><br />
-    <%= f.date_select :warranty_end_date, :include_blank => true %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                equipment_path, :class => 'btn' %>
   </div>
 <% end %>
