--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -1,30 +1,31 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Equipment -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Name:</b>
-  <%= @equipment.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @equipment.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
+  <dd><%= @equipment.price %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:purchase_date) %>:</strong></dt>
+  <dd><%= @equipment.purchase_date %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:placement_date) %>:</strong></dt>
+  <dd><%= @equipment.placement_date %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:warranty_end_date) %>:</strong></dt>
+  <dd><%= @equipment.warranty_end_date %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:location_id) %>:</strong></dt>
+  <dd><%= @equipment.location_id %></dd>
+</dl>
 
-<p>
-  <b>Price:</b>
-  <%= @equipment.price %>
-</p>
-
-<p>
-  <b>Purchase date:</b>
-  <%= @equipment.purchase_date %>
-</p>
-
-<p>
-  <b>Placement date:</b>
-  <%= @equipment.placement_date %>
-</p>
-
-<p>
-  <b>Warranty end date:</b>
-  <%= @equipment.warranty_end_date %>
-</p>
-
-
-<%= link_to 'Edit', edit_equipment_path(@equipment) %> |
-<%= link_to 'Back', equipment_index_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              equipment_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_equipment_path(@equipment), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              equipment_path(@equipment),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
