--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = Equipment -%>
+<%- model_class = Location -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
@@ -7,31 +7,21 @@
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:price) %></th>
-      <th><%= model_class.human_attribute_name(:purchase_date) %></th>
-      <th><%= model_class.human_attribute_name(:placement_date) %></th>
-      <th><%= model_class.human_attribute_name(:warranty_end_date) %></th>
-      <th><%= model_class.human_attribute_name(:location_id) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% @equipment.each do |equipment| %>
+    <% @locations.each do |location| %>
       <tr>
-        <td><%= link_to equipment.id, equipment_path(equipment) %></td>
-        <td><%= equipment.name %></td>
-        <td><%= equipment.price %></td>
-        <td><%= equipment.purchase_date %></td>
-        <td><%= equipment.placement_date %></td>
-        <td><%= equipment.warranty_end_date %></td>
-        <td><%= equipment.location_id %></td>
-        <td><%=l equipment.created_at %></td>
+        <td><%= link_to location.id, location_path(location) %></td>
+        <td><%= location.name %></td>
+        <td><%=l location.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_equipment_path(equipment), :class => 'btn btn-mini' %>
+                      edit_location_path(location), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      equipment_path(equipment),
+                      location_path(location),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -42,5 +32,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_equipment_path,
+            new_location_path,
             :class => 'btn btn-primary' %>
