--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -8,6 +8,7 @@
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:price) %></th>
+      <th><%= model_class.human_attribute_name(:location_id) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -18,6 +19,7 @@
         <td><%= link_to equipment.id, equipment_path(equipment) %></td>
         <td><%= equipment.name %></td>
         <td><%= equipment.price %></td>
+        <td><%= equipment.location.name if equipment.location_id %></td>
         <td><%=l equipment.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
