--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -5,14 +5,16 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @equipment.name %></dd>
+  <dd><%= @equipment.name||" - " %></dd>
   <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
-  <dd><%= @equipment.price %></dd>
+  <dd><%= @equipment.price||" - " %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:location_id) %>:</strong></dt>
+  <dd><%= @equipment.location_id ? @equipment.location.name : " - " %></dd>
 </dl>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              equipment_path, :class => 'btn'  %>
+              equipment_index_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_equipment_path(@equipment), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
