--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -8,6 +8,8 @@
   <dd><%= @equipment.name||" - " %></dd>
   <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
   <dd><%= @equipment.price||" - " %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:type_id) %>:</strong></dt>
+  <dd><%= @equipment.type_id ? @equipment.type.name : " - " %></dd>
   <dt><strong><%= model_class.human_attribute_name(:location_id) %>:</strong></dt>
   <dd><%= @equipment.location_id ? @equipment.location.name : " - " %></dd>
 </dl>
