link equipment and state

--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -10,6 +10,7 @@
       <th><%= model_class.human_attribute_name(:price) %></th>
       <th><%= model_class.human_attribute_name(:type_id) %></th>
       <th><%= model_class.human_attribute_name(:location_id) %></th>
+      <th><%= model_class.human_attribute_name(:state_id) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
@@ -21,6 +22,7 @@
         <td><%= equipment.price %></td>
         <td><%= equipment.type.name if equipment.type_id %></td>
         <td><%= equipment.location.name if equipment.location_id %></td>
+        <td><%= equipment.state.name if equipment.state_id %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_equipment_path(equipment), :class => 'btn btn-mini' %>
