--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -12,6 +12,8 @@
   <dd><%= @equipment.type_id ? @equipment.type.name : " - " %></dd>
   <dt><strong><%= model_class.human_attribute_name(:location_id) %>:</strong></dt>
   <dd><%= @equipment.location_id ? @equipment.location.name : " - " %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:state_id) %>:</strong></dt>
+  <dd><%= @equipment.state_id ? @equipment.state.name : " - " %></dd>
 </dl>
 
 <div class="form-actions">
