--- a/app/views/types/_form.html.erb
+++ b/app/views/types/_form.html.erb
@@ -5,6 +5,17 @@
       <%= f.text_field :name, :class => 'text_field' %>
     </div>
   </div>
+  <div class="control-group">
+    <label class="control-label">Attributes</label>
+  </div>
+  <%= f.fields_for :attribute_types do |builder| %>
+    <%= render 'attribute_type_fields', f: builder  %>
+  <% end %>
+  <div class="control-group">  
+    <div class="controls">
+      <%= link_to_add_fields 'Add Attribute', f, :attribute_types %>      
+    </div>
+  </div>
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
