--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -29,7 +29,7 @@
       <%= collection_select(:equipment, :state_id, State.all, :id, :name, {:prompt => "Select State"}) %>
     </div>
   </div>
-  <%= f.fields_for :attribute_types do |builder| %>
+  <%= f.fields_for :attribute_values do |builder| %>
     <%= render 'attribute_value_fields', f: builder  %>
   <% end %>
   <div class="form-actions">
