--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -5,7 +5,6 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -13,8 +12,7 @@
   <tbody>
     <% @states.each do |state| %>
       <tr>
-        <td><%= link_to state.id, state_path(state) %></td>
-        <td><%= state.name %></td>
+        <td><%= link_to state.name, state_path(state) %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_state_path(state), :class => 'btn btn-mini' %>
