--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -1,8 +1,13 @@
 <%= form_for @location, :html => { :class => 'form-horizontal' } do |f| %>
-  <div class="control-group">
+  <div class="control-group <%= "error" unless @location.errors[:name].blank? %>">
     <%= f.label :name, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :name, :class => 'text_field' %>
+      <% if @location.errors[:name] %>
+        <% @location.errors[:name].each do |msg| %>
+          <span class="help-inline"><%= msg %></span><br>
+        <% end %>
+      <% end %>
     </div>
   </div>
 
