--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -5,7 +5,6 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:price) %></th>
       <th><%= model_class.human_attribute_name(:type_id) %></th>
@@ -17,8 +16,7 @@
   <tbody>
     <% @equipment.each do |equipment| %>
       <tr>
-        <td><%= link_to equipment.id, equipment_path(equipment) %></td>
-        <td><%= equipment.name %></td>
+        <td><%= link_to equipment.name, equipment_path(equipment) %></td>
         <td><%= equipment.price %></td>
         <td><%= equipment.type.name if equipment.type_id %></td>
         <td><%= equipment.location.name if equipment.location_id %></td>
