--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Equiptory" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Equiptory - Система інвентарізації обладнання" %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -24,13 +24,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Equiptory</a>
+          <a class="brand" href="/">Equiptory</a>
           <div class="container nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Equipment", equipment_index_path %></li>
-              <li><%= link_to "Locations", locations_path %></li>
-              <li><%= link_to "Equipment Types", types_path %></li>
-              <li><%= link_to "States", states_path %></li>
+              <li><%= link_to "Обладнання", equipment_index_path %></li>
+              <li><%= link_to "Місця розташування", locations_path %></li>
+              <li><%= link_to "Типи обладнання", types_path %></li>
+              <li><%= link_to "Стани обладнання", states_path %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -53,10 +53,10 @@
               <div class="well sidebar-nav">
                 <h3>Navigation</h3>
                 <ul class="nav nav-list">
-                  <li><%= link_to "Equipment", equipment_index_path %></li>
-                  <li><%= link_to "Locations", locations_path %></li>
-                  <li><%= link_to "Equipment Types", types_path %></li>
-                  <li><%= link_to "States", states_path %></li>
+                  <li><%= link_to "Обладнання", equipment_index_path %></li>
+                  <li><%= link_to "Місця розташування", locations_path %></li>
+                  <li><%= link_to "Типи обладнання", types_path %></li>
+                  <li><%= link_to "Стани обладнання", states_path %></li>
                 </ul>
               </div><!--/.well -->
             </div><!--/span-->
