--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
             </div>
             <div class="span3">
               <div class="well sidebar-nav">
-                <h3>Navigation</h3>
+                <h3>Навігація</h3>
                 <ul class="nav nav-list">
                   <li><%= link_to "Обладнання", equipment_index_path %></li>
                   <li><%= link_to "Місця розташування", locations_path %></li>
