translate other views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
               <li><%= link_to "Обладнання", equipment_index_path %></li>
               <li><%= link_to "Місця розташування", locations_path %></li>
               <li><%= link_to "Типи обладнання", types_path %></li>
-              <li><%= link_to "Стани обладнання", states_path %></li>
+              <li><%= link_to "Технічні стани", states_path %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -56,7 +56,7 @@
                   <li><%= link_to "Обладнання", equipment_index_path %></li>
                   <li><%= link_to "Місця розташування", locations_path %></li>
                   <li><%= link_to "Типи обладнання", types_path %></li>
-                  <li><%= link_to "Стани обладнання", states_path %></li>
+                  <li><%= link_to "Технічні стани", states_path %></li>
                 </ul>
               </div><!--/.well -->
             </div><!--/span-->
