--- a/app/views/types/_attribute_type_fields.erb
+++ b/app/views/types/_attribute_type_fields.erb
@@ -2,6 +2,6 @@
   <div class="controls">
     <%= f.text_field :name %>
     <%= f.hidden_field :_destroy %>
-  <%= link_to "remove" , '#', class: 'remove_fields btn btn-mini btn-danger' %>
+  <%= link_to t("helpers.links.destroy") , '#', class: 'remove_fields btn btn-mini btn-danger' %>
   </div>
 </div>
