--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:name) %></th>
-      <th>Attributes</th>
+      <th><%= model_class.human_attribute_name(:attributes) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
