--- a/app/views/types/show.html.erb
+++ b/app/views/types/show.html.erb
@@ -6,7 +6,7 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @type.name %></dd>
-  <dt><strong>Attributes:</strong></dt>
+  <dt><strong><%= model_class.human_attribute_name(:attributes) %>:</strong></dt>
   <dd>
     <% @type.attribute_types.each do |attribute_type| %>
       <%= attribute_type.name %><br/>
