--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -30,3 +30,9 @@ body {
 //
 // Example:
 // @linkColor: #ff0000;
+.dl-horizontal dt {
+  width: 200px;
+}
+.dl-horizontal dd {
+  margin-left: 210px;
+}
