--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -14,6 +14,12 @@
   <dd><%= @equipment.location.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:state_id) %>:</strong></dt>
   <dd><%= @equipment.state.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:placement_date) %>:</strong></dt>
+  <dd><%= @equipment.placement_date.nil? ? "-" : l( @equipment.placement_date ) %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:purchase_date) %>:</strong></dt>
+  <dd><%= @equipment.purchase_date.nil? ? "-" : l( @equipment.purchase_date ) %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:warranty_end_date) %>:</strong></dt>
+  <dd><%= @equipment.warranty_end_date.nil? ? "-" : l( @equipment.warranty_end_date ) %></dd>      
 </dl>
 
 <h2><%= t 'equipment.additional_attributes' %></h2>
