--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
               <li><%= link_to "Місця розташування", locations_path %></li>
               <li><%= link_to "Типи обладнання", types_path %></li>
               <li><%= link_to "Технічні стани", states_path %></li>
+              <li><%= link_to "Профілактика", preventive_maintenance_index_path%></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -48,6 +49,7 @@
                   <li><%= link_to "Місця розташування", locations_path %></li>
                   <li><%= link_to "Типи обладнання", types_path %></li>
                   <li><%= link_to "Технічні стани", states_path %></li>
+                  <li><%= link_to "Профілактика", preventive_maintenance_index_path%></li>
                 </ul>
               </div><!--/.well -->
             </div><!--/span-->
