--- a/app/views/preventive_maintenance/index.html.erb
+++ b/app/views/preventive_maintenance/index.html.erb
@@ -9,7 +9,7 @@
         <%= t('.tester', :default => t("helpers.links.tester")) %>
       </td>
       <td>
-        <%= select_tag("tester", option_tags = nil, options = {}) %>
+        <%= select_tag("tester", option_tags = nil, {:prompt => "Виберіть відповільного" }) %>
       </td>
     </tr>
     <tr>
@@ -17,7 +17,7 @@
   	    <%= t('.location', :default => t("helpers.links.location")) %>
       </td>
       <td>
-        <%= select_tag "location", options_from_collection_for_select(@locations,'id', "name"), {:name => :location } %>
+        <%= select_tag "location", options_from_collection_for_select(@locations,'id', "name"), {:name => :location, :prompt => "Виберіть місце" } %>
       </td>
       <tr>
         <td colspan='2'><%= submit_tag t('.start', :default => t("helpers.links.start")), :class => 'btn btn-primary' %></td>
