--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,7 @@
       <div class="content">
         <div class="row">
             <div class="span3">
+              <%= yield :sidebar %>
               <div class="well sidebar-nav">
                 <h3>Навігація</h3>
                 <ul class="nav nav-list">
