--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -34,12 +34,12 @@
   <%= link_to t('.back', :default => t("helpers.links.back")),
               equipment_index_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_equipment_path(@equipment), :class => 'btn' %>
+              edit_equipment_path(@equipment), :class => 'btn' if can? :update, Equipment%>
   <%= link_to t('.copy', :default => t("helpers.links.copy")),
-              copy_equipment_path(@equipment), :class => 'btn btn-info' %>
+              copy_equipment_path(@equipment), :class => 'btn btn-info' if can? :create, Equipment %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               equipment_path(@equipment),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+              :class => 'btn btn-danger'  if can? :destroy, Equipment%>
 </div>
