--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">Equiptory</a>
+          <a class="brand" href="/">Equiptory 0.2</a>
           <div class="container nav-collapse">
             <ul class="nav">
               <% if can? :read, Equipment %>
